--- a/examples/plot/roc.ipynb
+++ b/examples/plot/roc.ipynb
@@ -18,7 +18,7 @@
      "text": [
       "usage: ipykernel_launcher.py [-h] -i INPUT [INPUT ...] [-o OUTPUT]\n",
       "                             [-g [GROUPS [GROUPS ...]]]\n",
-      "                             [-l [LABELS [LABELS ...]]]\n",
+      "                             [-l [LABELS [LABELS ...]]] [-t TITLE]\n",
       "\n",
       "Plot ROC curve(s).\n",
       "\n",
@@ -27,7 +27,8 @@
       "  -i INPUT [INPUT ...], --input INPUT [INPUT ...]\n",
       "  -o OUTPUT, --output OUTPUT\n",
       "  -g [GROUPS [GROUPS ...]], --groups [GROUPS [GROUPS ...]]\n",
-      "  -l [LABELS [LABELS ...]], --labels [LABELS [LABELS ...]]\n"
+      "  -l [LABELS [LABELS ...]], --labels [LABELS [LABELS ...]]\n",
+      "  -t TITLE, --title TITLE\n"
      ]
     }
    ],
@@ -71,7 +72,9 @@
     "\n",
     "args = roc.parse(argv)\n",
     "\n",
-    "roc.plot(args.input)"
+    "args_dict = roc.args_to_dict(args)\n",
+    "\n",
+    "roc.plot(**args_dict)"
    ]
   },
   {
@@ -98,7 +101,9 @@
     "\n",
     "args = roc.parse(argv)\n",
     "\n",
-    "roc.plot(args.input, labels=args.labels)"
+    "args_dict = roc.args_to_dict(args)\n",
+    "\n",
+    "roc.plot(**args_dict)"
    ]
   },
   {
@@ -133,7 +138,9 @@
     "\n",
     "args = roc.parse(argv)\n",
     "\n",
-    "roc.plot(args.input, groups=args.groups, labels=args.labels)"
+    "args_dict = roc.args_to_dict(args)\n",
+    "\n",
+    "roc.plot(**args_dict)"
    ]
   },
   {
@@ -161,7 +168,9 @@
     "\n",
     "args = roc.parse(argv)\n",
     "\n",
-    "roc.plot(args.input, groups=args.groups, labels=args.labels)"
+    "args_dict = roc.args_to_dict(args)\n",
+    "\n",
+    "roc.plot(**args_dict)"
    ]
   }
  ],
@@ -181,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
