--- a/examples/plot/roc.ipynb
+++ b/examples/plot/roc.ipynb
@@ -16,19 +16,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: ipykernel_launcher.py [-h] -i INPUT [INPUT ...] [-o OUTPUT]\n",
-      "                             [-g [GROUPS [GROUPS ...]]]\n",
+      "usage: ipykernel_launcher.py [-h] [-o OUTPUT] [-g [GROUPS [GROUPS ...]]]\n",
       "                             [-l [LABELS [LABELS ...]]] [-t TITLE]\n",
+      "                             [-pl POSITIVE_LABEL]\n",
+      "                             input [input ...]\n",
       "\n",
       "Plot ROC curve(s).\n",
       "\n",
+      "positional arguments:\n",
+      "  input\n",
+      "\n",
       "optional arguments:\n",
       "  -h, --help            show this help message and exit\n",
-      "  -i INPUT [INPUT ...], --input INPUT [INPUT ...]\n",
       "  -o OUTPUT, --output OUTPUT\n",
       "  -g [GROUPS [GROUPS ...]], --groups [GROUPS [GROUPS ...]]\n",
       "  -l [LABELS [LABELS ...]], --labels [LABELS [LABELS ...]]\n",
-      "  -t TITLE, --title TITLE\n"
+      "  -t TITLE, --title TITLE\n",
+      "  -pl POSITIVE_LABEL, --positive_label POSITIVE_LABEL\n"
      ]
     }
    ],
@@ -68,7 +72,7 @@
     }
    ],
    "source": [
-    "argv = [\"-i\", \"data/roc_f1.dat\"]\n",
+    "argv = [\"data/roc_f1.dat\"]\n",
     "\n",
     "args = roc.parse(argv)\n",
     "\n",
@@ -96,7 +100,7 @@
     }
    ],
    "source": [
-    "argv = [\"-i\", \"data/roc_f0.dat\", \"data/roc_f1.dat\", \"data/roc_f2.dat\",\n",
+    "argv = [\"data/roc_f0.dat\", \"data/roc_f1.dat\", \"data/roc_f2.dat\",\n",
     "        \"-l\", \"Fold 1\", \"Fold 2\", \"Fold 3\"]\n",
     "\n",
     "args = roc.parse(argv)\n",
@@ -132,7 +136,7 @@
     }
    ],
    "source": [
-    "argv = [\"-i\", \"data/roc_f0.dat\", \"data/roc_f1.dat\", \"data/roc_f2.dat\",\n",
+    "argv = [\"data/roc_f0.dat\", \"data/roc_f1.dat\", \"data/roc_f2.dat\",\n",
     "        \"-l\", \"Group 0\", \"Group 0\", \"Group 1\",\n",
     "        \"-g\", \"0\", \"0\", \"0\"] # Same group\n",
     "\n",
@@ -162,7 +166,7 @@
     }
    ],
    "source": [
-    "argv = [\"-i\", \"data/roc_f0.dat\", \"data/roc_f1.dat\", \"data/roc_f2.dat\",\n",
+    "argv = [\"data/roc_f0.dat\", \"data/roc_f1.dat\", \"data/roc_f2.dat\",\n",
     "        \"-l\", \"Group 0\", \"Group 0\", \"Group 1\",\n",
     "        \"-g\", \"0\", \"0\", \"1\"] # Two different groups\n",
     "\n",
